Bugfix: Too many borders on safari
+ safari puts borders by default
  thus, 0px was added for all other sides in the roadmap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,10 +48,6 @@ h1, h2, h3, h4, h5, h6 {
 
 /* ---------- ROADMAP ---------- */
 
-.no-border {
-  border: 0px;
-}
-
 .col-rm-left {
   border-left: 3px solid;
   border-bottom: 3px solid;
@@ -64,8 +60,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .col-rm-bottom-to-right {
-  border-bottom: 3px solid;
   border-width: 4px;
+  border-bottom: 3px solid;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 0px;
   border-image: linear-gradient(to right, var(--sec-col) 0%, var(--acc-col) 100%);
   border-image-slice: 1;
   margin-right: 0px;
@@ -79,8 +78,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .col-rm-bottom-to-left {
-  border-bottom: 3px solid;
   border-width: 4px;
+  border-bottom: 3px solid;
   border-left: 0px;
   border-right: 0px;
   border-top: 0px;
@@ -97,9 +96,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .col-rm-right {
+  border-width: 4px;
   border-right: 3px solid;
   border-bottom: 3px solid;
-  border-width: 4px;
   border-top: 0px;
   border-left: 0px;
   margin-left: 0px;
@@ -116,14 +115,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .col-rm-left {
+  border-width: 4px;
   border-left: 3px solid;
   border-bottom: 3px solid;
+  border-right: 0px;
+  border-top: 0px;
   margin-right: 0px;
   padding-left: 20px;
   padding-bottom: 20px;
   height: 100%;
   border-image: linear-gradient(to left, var(--sec-col) 0%, var(--acc-col) 100%);
-  border-width: 4px;
   border-image-slice: 1;
   display: flex;
   flex-direction: column;
